--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -207,6 +207,7 @@
     <None Include="res\Client.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\images\table.bmp" />
     <Image Include="res\Client.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
