--- a/Client/Client/Client.vcxproj.filters
+++ b/Client/Client/Client.vcxproj.filters
@@ -56,5 +56,8 @@
     <Image Include="res\Client.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\images\table.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
