define player combination,  define plyers with top combination

--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -184,6 +184,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
+    <ClInclude Include="DefineCombination.h" />
     <ClInclude Include="Enums.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Server.h" />
@@ -193,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="DefineCombination.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="ServerDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
