combobox for ip in locale and define this ip

--- a/Client/Client/Client.vcxproj
+++ b/Client/Client/Client.vcxproj
@@ -98,6 +98,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
